[tool.poetry]
name = "mystage"
version = "0.1.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.10.0" }
visionapi_yq = {git = "https://github.com/siri-rouser/visionapi_YQ.git", rev= '7ea2ec0240dfb50f597c89d97c8e75872aa9204c', subdirectory="visionapi_YQ", tag = "0.0.1" }
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
numba = "^0.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
